<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="item"
            type="com.example.kasir_pintar_project.database.Item" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="8dp"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:id="@+id/cardItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageItem"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvNameItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@{item.name}"
                    tools:text="@string/nameItem" />

                <TextView
                    android:id="@+id/tvItemCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:text="@{item.id}"
                    tools:text="@string/nameCode" />

                <TextView
                    android:id="@+id/tvPriceItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@{item.priceInString}"
                    tools:text="@string/price" />
            </LinearLayout>

            <ImageView
                android:id="@+id/ivNextNav"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                tools:src="@drawable/ic_baseline_navigate_next_24" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>